add_group changed
